# Owen_Code

./: Cargo.toml  README.md
src/: agent.rs  app.rs  config.rs  events.rs  main.rs  planner.rs  session.rs
src/ai/: mod.rs  nim.rs  ollama.rs
src/tools/: file.rs  mod.rs  shell.rs  web_search.rs
src/ui/: chat.rs  confirm.rs  file_tree.rs  help.rs  mod.rs  model_select.rs  session_select.rs  status_bar.rs
